--- a/unchosen.css
+++ b/unchosen.css
@@ -9,7 +9,7 @@
         font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         background-color: rgb(116, 0, 224);
         border-radius: 43px;
-        padding: 15px;
+        padding: 7.5px;
     }
 
     div {
@@ -21,4 +21,8 @@
         color: rgba(245, 0, 233, 0.863);
         font-family: 'Press Start 2P', cursive;
         font-size: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 3em;
     }
