--- a/unchosen.css
+++ b/unchosen.css
@@ -19,7 +19,7 @@
     }
 
     .storyText {
-        text-indent: 10%;
+        text-indent: 20%;
     }
 
     button{
@@ -69,6 +69,17 @@
          text-align: justify;
      }
 
+     #playArea {
+         font-size: 42px ;
+     }
+
+     #credits-title-main {
+         display:flex;
+         flex-direction: column;
+         align-items: center;
+         justify-content: center;
+     }
+
 .center_right {
     display: flex;
     justify-content: center;
@@ -87,7 +98,7 @@
 
 #buttonArea {
     display: flex;
-
+    margin-top: 50px;
 }
 
 span.material-symbols-outlined {
